﻿[B]Changelog[/B]
* Removed: TV4 Live, as it moved to cmore.se (Closes #914)

[I]Previous changes[/I]
* Fixed: UR Play again (Fixes #910)
* Fixed: UR Play (Fixes #907)
* Fixed: SVT listing broke (Fixes #899)
* Fixed: Exclude "Kommande" folders (Fixes #881)
* Fixed: TV4Play can work without HTTPS and thus without SSL errors (See #859)
* Fixed: SVT API update (Fixes #857)
* Fixed: Paging issue with Kanal 5
* Fixed: SVT Live channels (Fixes #853)
* Removed: TV4 login option as it never really made sense and all premium content is now at cmore.se (See #450)
* Fixed: Some fanart did now show for SVT
* Fixed: SVT did not play due to API changes (Fixes #828)
* Fixed: Some thumbnails did not show for SVT (Fixes #813)
* Added: SVT and Oppet Arkiv genres (Fixes #624)
* Fixed: SVT Update their API (Fixes #811)
* Fixed: removed video files from main listing (Fixes #800)
* Changed: SVT Play shows Geo Block information from main list now (See #800)
* Fixed: SVT upgraded some of their genres (Barn, Sport) to the new format (Fixes #787)
* Fixed: UR Play changed subtitle formats (Fixes #784)
* Fixed: SVT Search(Fixes #782)
* Fixed: TV4 Play updated their Video API (Fixes #779)
* Fixed: SVT updated their API again :sigh: (Fixes #776)
* Fixed: Don't show Oppet Arkiv in SVT (Fixes #774)
* Fixed: SVT updated a typoo in their API (And left the biggest one in there) (Fixes #769)
* Fixed: MTG (Kanal 5) subtitle issue (Fixes #770)
* Fixed: UR Play broke (Fixes #771)
* Fixed: SVT changed API location - part #2 (Fixes #767)
* Fixed: SVT changed API location (Fixes #757)
* Fixed: Kanal 5 'recent' videos did not work
* Fixed: SVT special folders did not work
* Added: URPlay Kategorier (Fixes #749)
* Fixed: UR Play broke (Fixes #743)
* Added: *live* indicator to videos that are live at the moment (Fixes #741)
* Added: sXXeXX if Season and Episode data is present
* Fixed: SVT changed more layouts (Fixes #738)
* Fixed: Categories in TV4Play only showed the first 25 items (Fixes #732)