@@ -324,6 +324,10 @@ class Channel(chn_class.Channel):
                 dayName = "\a.: %s :." % (day, )
                 extras[dayName] = (url, startDate, False)
 
+        extras["\a.: Lives&#xE4;ndningar :."] = (
+            "http://webapi.tv4play.se/play/video_assets?exclude_node_nids=&platform=tablet&"
+            "per_page=32&is_live=true&product_groups=2&type=episode&per_page=100", None, False)
+
         for name in extras:
             url, date, isLive = extras[name]
             item = mediaitem.MediaItem(name, url)
@@ -540,6 +544,7 @@ class Channel(chn_class.Channel):
         item.icon = self.icon
         item.isGeoLocked = resultSet["is_geo_restricted"]
         item.isDrmProtected = resultSet["is_drm_protected"]
+        item.isLive = resultSet.get("is_live", False)
         return item
 
     def CreateCategoryItem(self, resultSet):
