@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-* Removed: TV4 Live, as it moved to cmore.se (Closes #914)
+* Added: TV4Play.se Live Livesändningar (Fixes #915)
 
 [I]Previous changes[/I]
+* Removed: TV4 Live, as it moved to cmore.se (Closes #914)
 * Fixed: UR Play again (Fixes #910)
 * Fixed: UR Play (Fixes #907)
 * Fixed: SVT listing broke (Fixes #899)
